// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> should render Checkbox 1`] = `
<div>
  <label
    class="cuke-checkbox-wrapper"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    class="cuke-checkbox-wrapper cuke-checkbox-disabled"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    checked=""
    class="cuke-checkbox-wrapper cuke-checkbox-checked cuke-checkbox-disabled"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        checked=""
        class="cuke-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span />
  </label>
</div>
`;

exports[`<Checkbox/> should render Checkbox.Button 1`] = `
<div>
  <label
    class="cuke-checkbox-wrapper cuke-checkbox-button-wrapper cuke-checkbox-default"
  >
    <span
      class="cuke-checkbox cuke-checkbox-button"
    >
      <input
        class="cuke-checkbox-input"
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    class="cuke-checkbox-wrapper cuke-checkbox-button-wrapper cuke-checkbox-disabled cuke-checkbox-default"
  >
    <span
      class="cuke-checkbox cuke-checkbox-button"
    >
      <input
        class="cuke-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      黄瓜 ui
    </span>
  </label>
  <label
    checked=""
    class="cuke-checkbox-wrapper cuke-checkbox-button-wrapper cuke-checkbox-checked cuke-checkbox-disabled cuke-checkbox-default"
  >
    <span
      class="cuke-checkbox cuke-checkbox-button"
    >
      <input
        checked=""
        class="cuke-checkbox-input"
        disabled=""
        type="checkbox"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span />
  </label>
</div>
`;

exports[`<Checkbox/> should render CheckboxGroup 1`] = `
<div
  class="cuke-checkbox-group"
>
  <label
    class="cuke-checkbox-wrapper"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        type="checkbox"
        value="黄瓜"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      黄瓜
    </span>
  </label>
  <label
    class="cuke-checkbox-wrapper"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        type="checkbox"
        value="茄子"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      茄子
    </span>
  </label>
  <label
    class="cuke-checkbox-wrapper"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        type="checkbox"
        value="玉米"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      玉米
    </span>
  </label>
  <label
    class="cuke-checkbox-wrapper cuke-checkbox-disabled"
  >
    <span
      class="cuke-checkbox"
    >
      <input
        class="cuke-checkbox-input"
        disabled=""
        type="checkbox"
        value="番茄"
      />
      <span
        class="cuke-checkbox-inner"
      />
    </span>
    <span>
      番茄
    </span>
  </label>
</div>
`;
